2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: Worked on ctrl+space command.

2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpAmbience.cs: Generic method parameters are now emitted.

2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* Gui/MemberCompletionData.cs: fixed 'Bug 367716 - Code completion
	  shows obsolete functions'.

2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: fixed bug 'Bug 427511 - Code
	  Completion not working for files not belonging to a project'.

2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs: Resolver now throws an argumentnull
	  exception, when dom is not set.

2008-09-20  Mike Krüger <mkrueger@novell.com> 

	* Gui/ResolveVisitor.cs, Gui/CSharpTextEditorCompletion.cs: removed
	  debug messages.

2008-09-20  Mike Krüger <mkrueger@novell.com> 

	* Gui/ResolveVisitor.cs, Parser/NRefactoryParser.cs: Added operator
	  overload handling.

2008-09-20  Mike Krüger <mkrueger@novell.com> 

	* Parser/NRefactoryParser.cs: Operators are now converted.

2008-09-20  Mike Krüger <mkrueger@novell.com> 

	* Gui/NewCSharpExpressionFinder.cs, Gui/CSharpTextEditorCompletion.cs:
	  Fixed 'Bug 427375 - Code Completion: Incorrect completion of
	  "using"'

2008-09-20  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: Removed duplicate get/set in
	  property declaration.

2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs: fixed 'Bug 427734 - Code Completion issues
	  with enums'.

2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: fixed.

2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs: forget one commit.

2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* Gui/ResolveVisitor.cs: fixed 'Bug 427649 - Code Completion: protected
	  methods shown in code completion'.

2008-09-19  Mike Krüger <mkrueger@novell.com> 
