@@ -1,3 +1,9 @@
+2008-09-23  Mike Krüger <mkrueger@novell.com> 
+
+	* Gui/NewOverrideCompletionData.cs, Gui/CSharpTextEditorCompletion.cs:
+	  fixed 'Bug 428387 - Code Completion: 'override' completion is
+	  incorrect for interfaces'.
+
 2008-09-22  Mike Krüger <mkrueger@novell.com> 
 
 	* Gui/CSharpTextEditorCompletion.cs: Worked on ctrl+space command.
